Cleaned up styline bugs for scroll bars and word wrapping

--- a/client/src/components/authentication/Styles.module.scss
+++ b/client/src/components/authentication/Styles.module.scss
@@ -37,7 +37,6 @@
   width: 75%;
   max-height: 70%;
   text-align: left;
-  overflow: scroll;
   @include flexThis(space-between, center, column);
 
   label {
