--- a/client/src/components/new_commitment_form/Styles.module.scss
+++ b/client/src/components/new_commitment_form/Styles.module.scss
@@ -11,7 +11,6 @@
   width: 75%;
   max-height: 70%;
   text-align: center;
-  overflow: scroll;
 
   &__activity {
     margin: 0 auto;
