--- a/client/src/components/status_pill/Styles.module.scss
+++ b/client/src/components/status_pill/Styles.module.scss
@@ -36,12 +36,7 @@
   }
 }
 
-
-
 .statPill {
-
- 
-  overflow-wrap: break-word;
   h3 {
     padding-top: 0.5rem;
     font-size: .8rem;
